<!DOCTYPE resources [<!ENTITY appname "School tools"><!ENTITY author "Murilo Calegari de Souza">]>

<resources>
    <string name="app_name">School tools</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="subject">Subject</string>
    <string name="subjects">Subjects</string>
    <string name="schedule">Schedule</string>
    <string name="grades">Grades</string>
    <string name="events">Events</string>
    <string name="classes">Classes</string>
    <string name="drawer_secondary_title">Adjustments</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="Home">Home</string>
    <string name="hi">Hi,</string>
    <string name="edit">Edit</string>
    <string name="edit_username">Edit username</string>
    <string name="student">Student</string>

    <!-- Strings related to About -->

    <string name="app_about_1">
        This app was born as a remake of the original Scholar tools application developed by Mayke Santos.
    </string>
    <string name="app_about_2">
        "The idea was to create a simple app that can help you keep track of your grades in a nice and clean way; displaying them as percentages hence giving you the opportunity of anticipating you final grades."
    </string>
    <string name="developer_info">
        "This app was developed by &author; and it's hosted on GitHub at https://github.com/MuriloCalegari/Agenda-Escolar. \n"
        "Please, fell free to contribute to this project; you can always contact me at murilo.calegari.souza@gmail.com
    </string>
    <string name="aboutActivityName">About</string>
    <string name="review">Please, don\'t forget to review by pressing the following button:</string>
    <string name="review_button">Rate us!</string>
    <string name="open_source_libraries">Open Source Libraries</string>

    <!-- Strings related to Settings -->

    <string name="title_activity_settings">Settings</string>
    <string name="total_classes">Total classes</string>
    <string name="total_classes_summary">How many classes do you have per day?</string>
    <string name="minimum_percentage">Minimum required grade</string>
    <string name="minimum_percentage_summary">Minimum percentage to be approved</string>

    <!-- Strings related to New Subject -->

    <string name="title_activity_new_subject">New Subject</string>
    <string name="name">Name</string>
    <string name="professor">Professor</string>
    <string name="abbreviation">Abbreviation</string>
    <string name="min_max_character_abbreviation_error">Abbreviation must have 2 to 6 characters</string>
    <string name="min_max_character_subject_name_error">Name size must have 2 to 40 characters</string>
    <string name="empty">(Empty)</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirm_data">Confirm data</string>
    <string name="everything_correct">Is everything correct?</string>
    <string name="subject_confirm_button">Create subject</string>
    <string name="min_max_character_professor_error">Professor name must have 2 to 40 characters</string>
    <string name="code_version">Code version:</string>

    <!-- Strings related to Edit Subject -->

    <string name="title_activity_edit_subject">Edit subject</string>
    <string name="subject_confirm_save_button">Save subject</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="abbreviation_already_on_database">Abbreviation is already in use</string>
    <string name="confirm_subject_delete_title">Delete subject?</string>
    <string name="confirm_subject_delete_message">This will permanently delete this subject and its grades</string>
    <string name="delete">Delete</string>

    <!-- Strings related to Subject Grades -->
    <string name="out_of">out of</string>
    <string name="title_activity_edit_subject_grade">Edit grade</string>
    <string name="description">Description</string>
    <string name="min_max_character_subject_grade_description_error">Description size must have 2 to 40 characters</string>
    <string name="obtained_grade">Obtained Grade</string>
    <string name="maximum_grade">Maximum Grade</string>
    <string name="maximum_grade_different_from_zero">Maximum grade must not equal zero</string>
    <string name="title_activity_new_subject_grade">New grade</string>
    <string name="is_extra_credit">Is extra credit?</string>
    <string name="save_grade">Save grade</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="extra_credit_subtitle">This maximum grade  won\'t be added to the subject\'s maximum grade</string>
    <string name="confirm_subject_grade_delete_title">Delete grade?</string>
    <string name="confirm_subject_grade_delete_message">This will permanently delete this grade</string>
    <string name="your_grades">Your grades</string>
    <string name="to_keep_an_eye">The lowest ones, to keep an eye!</string>

    <!-- Strings related to Schedules -->

    <string name="title_activity_new_subject_schedule">NewSubjectSchedule</string>
    <string name="error_alarm_days_min_days">A day should be marked</string>

    <string-array name="week_days">
        <item>S</item>
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
        <item>S</item>
    </string-array>

    <string-array name="week_days_extended">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string name="class_event_save_button">Save class</string>
    <string name="day_of_the_week">Day of the week</string>
    <string name="start_time">Start time</string>
    <string name="which_time_start">At which time does the class start?</string>
    <string name="end_time">End time</string>
    <string name="which_time_end">At which time does the class finish?</string>
    <string name="create_subject_first">Create a subject first!</string>
    <string name="end_time_before_start_time">End time is set before start time!</string>
    <string name="title_activity_edit_class_time">Edit class</string>
    <string name="confirm_class_event_delete_message" />
    <string name="confirm_class_event_delete_title">Delete class?</string>
    <string name="no_grades_available">You still haven\'t added any grade!</string>
    <string name="no_subjects_available">You still haven\'t added any subject!</string>

    <string name="nothing_around_here">Nothing around here.</string>
    <string name="copyright">Copyright</string>
</resources>
